--- a/src/components/ItemList/ItemList.module.css
+++ b/src/components/ItemList/ItemList.module.css
@@ -1,6 +1,6 @@
 .content{
   display: flex;
-  justify-content: center;
+  /*justify-content: center;*/
   flex-grow: 1;
   flex-direction: column;
   padding: 10px 0 10px 0;
