--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -30,6 +30,10 @@ body {
   border-radius: 0 0 10px 10px;
 }
 
+/**, ::after, ::before{*/
+/*    box-sizing: border-box;*/
+/*}*/
+
 .content{
   display: flex;
   width: 100%;
