--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -3,8 +3,11 @@
     width: 300px;
 }
 
-input[type="text"] {
-    min-width: 200px;
+
+
+.sidebar input[type="text"] {
+    box-sizing: border-box;
+    width: 100%;
     font-size: 1.2rem;
     padding: 5px 15px;
     background-color: #3d424b;
@@ -15,6 +18,7 @@ input[type="text"] {
 .sidebar form{
     display: flex;
     flex-direction: column;
+    margin: 10px;
 }
 
 label {
