--- a/src/components/ItemList/Item/Item.module.css
+++ b/src/components/ItemList/Item/Item.module.css
@@ -1,11 +1,12 @@
 .row{
     display: flex;
-    margin: 1px 0;
-    justify-content: space-around;
+    /*margin: 3px 0;*/
 }
 
 .row div{
     padding: 10px;
+    width: 100%;
+    text-align: center;
 }
 
 .row_even{
