--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -14,10 +14,7 @@ body {
   border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb{
-  background-color: #3d424b;
-}
-
+::-webkit-scrollbar-thumb,
 ::-webkit-scrollbar-button{
   background-color: #3d424b;
 }
@@ -30,11 +27,14 @@ body {
   border-radius: 0 0 10px 10px;
 }
 
-/**, ::after, ::before{*/
-/*    box-sizing: border-box;*/
-/*}*/
-
 .content{
-  display: flex;
-  width: 100%;
+  /*display: flex;*/
+  /*width: 100%;*/
+}
+
+.App {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: minmax(max-content, 1fr);
+  gap: 5px;
 }
