Added controls in modal window

--- a/src/components/modalAddItems/ModalAddItems.module.css
+++ b/src/components/modalAddItems/ModalAddItems.module.css
@@ -35,6 +35,22 @@
     /*background-color: #b3d4fc;*/
 }
 
+.content input[type="text"],
+.content input[type="checkbox"]
+{
+    box-sizing: border-box;
+    width: 100%;
+    font-size: 1.2rem;
+    padding: 5px 15px;
+    background-color: #3d424b;
+    color: #8293a4;
+    border: 0;
+}
+.content form{
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
 
 
 /*********************************************************/
@@ -88,4 +104,71 @@ option{
 
 option:hover{
 	color: #0d191d;
+}
+
+
+/*********************************/
+.checkbox {
+  /*position: absolute;*/
+  /*top: 50%;*/
+  /*left: 50%;*/
+  /*transform: translate(-50%, -50%);*/
+}
+
+.content input[type="checkbox"] {
+  width: 50px;
+  height: 25px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: #b34046;
+  outline: none;
+  border-radius: 50px;
+  box-shadow: inset 0 0 5px rgba(0,0,0, .2);
+  transition: 0.5s;
+  position: relative;
+}
+.content input:checked[type="checkbox"] {
+  background: #8df472;
+}
+.content input[type="checkbox"]::before {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  top: 0;
+  left: 0;
+  background: #fff;
+  transform: scale(1.1);
+  box-shadow: 0 2px 5px rgba(0,0,0, .2);
+  transition: 0.5s;
+}
+.content input:checked[type="checkbox"]::before {
+  left: 25px;
+}
+/*********************************/
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.inputfile + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    background-color: #282c34;
+    display: inline-block;
+}
+.inputfile:focus + label,
+.inputfile + label:hover {
+    background-color: red;
+}
+
+.inputfile + label {
+	cursor: pointer;
 }
