can add new person (no script)

--- a/src/components/modalAddItems/ModalAddItems.module.css
+++ b/src/components/modalAddItems/ModalAddItems.module.css
@@ -14,10 +14,7 @@
 	box-sizing: border-box;
     padding: 20px;
     color: #8293a4;
-    width: 50%;
-    min-width: 700px ;
-    height: 40%;
-    min-height: 400px;
+    /*min-height: 400px;*/
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -34,9 +31,12 @@
 .content {
     /*background-color: #b3d4fc;*/
 }
-
+.content textarea{
+    resize: none;
+}
 .content input[type="text"],
-.content input[type="checkbox"]
+.content input[type="checkbox"],
+.content textarea
 {
     box-sizing: border-box;
     width: 100%;
@@ -45,6 +45,7 @@
     background-color: #3d424b;
     color: #8293a4;
     border: 0;
+    margin: 10px 0;
 }
 .content form{
     display: flex;
@@ -52,6 +53,9 @@
     margin: 10px;
 }
 
+.content__person{
+    width: 350px;
+}
 
 /*********************************************************/
 
@@ -77,7 +81,7 @@
     border-radius: 10px;
     margin: 0;
     display: block;
-    width: 100%;
+    width: 300px;
     padding: 12px 55px 15px 15px;
     font-size: 14px;
     color: #8293a4;
@@ -98,23 +102,27 @@
     z-index: -1;
     border-radius: 10px 0 0 10px;
 }
-option{
-	/*background-color: #61dafb;*/
-}
 
 option:hover{
 	color: #0d191d;
 }
 
-
-/*********************************/
-.checkbox {
-  /*position: absolute;*/
-  /*top: 50%;*/
-  /*left: 50%;*/
-  /*transform: translate(-50%, -50%);*/
+.general{
+    display: flex;
+    flex-direction: column;
 }
 
+.general button{
+    align-self: center;
+    background-color: #353a43;
+    color: #8293a4;
+    border: 0;
+    width: 200px;
+    height: 50px;
+    padding: 5px 30px;
+    margin-top: 10px;
+}
+/*********************************/
 .content input[type="checkbox"] {
   width: 50px;
   height: 25px;
@@ -146,6 +154,17 @@ option:hover{
 .content input:checked[type="checkbox"]::before {
   left: 25px;
 }
+
+.checkbox{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 150px;
+}
+
+.checkbox span{
+    margin: 0 10px;
+}
 /*********************************/
 
 .inputfile {
@@ -153,20 +172,18 @@ option:hover{
 	height: 0.1px;
 	opacity: 0;
 	overflow: hidden;
-	position: absolute;
 	z-index: -1;
 }
 
 .inputfile + label {
-    font-size: 1.25em;
-    font-weight: 700;
-    color: white;
-    background-color: #282c34;
-    display: inline-block;
+    color: #8293a4;
+    background-color: #3d424b;
+    max-width: 200px;
+    padding: 10px 5px;
 }
 .inputfile:focus + label,
 .inputfile + label:hover {
-    background-color: red;
+    background-color: #3d424b;
 }
 
 .inputfile + label {
