--- a/src/components/modalAddItems/Computer/Computer.module.css
+++ b/src/components/modalAddItems/Computer/Computer.module.css
@@ -1,18 +1,18 @@
-.content__Hardware{
+.content__Computer{
     /*width: 350px;*/
     display: flex;
 }
 
-.content__Hardware>div{
+.content__Computer>div{
     margin: 10px;
 }
 
-.content__Hardware input[type="text"]{
+.content__Computer input[type="text"]{
     min-width: 350px;
 }
 
-.content__Hardware input[type="text"],
-.content__Hardware input[type="checkbox"] {
+.content__Computer input[type="text"],
+.content__Computer input[type="checkbox"] {
     box-sizing: border-box;
     width: 100%;
     font-size: 1.2rem;
@@ -23,7 +23,7 @@
     margin: 10px 0;
 }
 
-.content__Hardware input[type="checkbox"] {
+.content__Computer input[type="checkbox"] {
   width: 50px;
   height: 25px;
   -webkit-appearance: none;
@@ -35,10 +35,10 @@
   transition: 0.5s;
   position: relative;
 }
-.content__Hardware input:checked[type="checkbox"] {
+.content__Computer input:checked[type="checkbox"] {
   background: #8df472;
 }
-.content__Hardware input[type="checkbox"]::before {
+.content__Computer input[type="checkbox"]::before {
   content: '';
   position: absolute;
   width: 25px;
@@ -51,14 +51,13 @@
   box-shadow: 0 2px 5px rgba(0,0,0, .2);
   transition: 0.5s;
 }
-.content__Hardware input:checked[type="checkbox"]::before {
+.content__Computer input:checked[type="checkbox"]::before {
   left: 18px;
 }
 
 .checkbox{
     display: flex;
-    justify-content: start;
-    align-items: center;
+    align-items: flex-start;
     width: 150px;
 }
 
