--- a/src/components/modalAddItems/person/Person.module.css
+++ b/src/components/modalAddItems/person/Person.module.css
@@ -48,8 +48,8 @@
 
 .checkbox{
     display: flex;
-    justify-content: start;
-    align-items: center;
+    /*justify-content: start;*/
+    align-items: flex-start;
     width: 150px;
 }
 
