--- a/src/components/ItemList/Item/Item.module.css
+++ b/src/components/ItemList/Item/Item.module.css
@@ -3,6 +3,12 @@
     /*margin: 3px 0;*/
 }
 
+.row:hover{
+    transition: .2s linear;
+    box-shadow: 0 0 14px -3px #61dafb;
+    z-index: 10;
+}
+
 .row div{
     padding: 10px;
     width: 100%;
