refactoring the project structure and different css files

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -38,3 +38,8 @@ body {
   grid-template-columns: minmax(max-content, 1fr);
   gap: 5px;
 }
+
+a, a:hover, a:active, a:focus{
+    text-decoration: none;
+    outline: 0;
+}
